--- a/quodlibet/NEWS
+++ b/quodlibet/NEWS
@@ -1,3 +1,24 @@
+2.9.91 (2013-05-13) - welcome to a place where incredibly terrible things can happen to you and your friends for no reason!
+---------------------------------------------------------------------------------------------------------------------------
+
+General
+ * Spanish, Basque and Galician translation updates (Johám-Luís Miguéns Vila)
+ * Tag editor: Fix context menu not showing
+ * Album collection: Fix crash with PyGObject 3.2
+ * Fix search bar text color
+ * Fix DnD to closed queue
+ * Fix hangs during unix signal handling
+ * Fix 100% CPU in some cases
+ * Fix library refresh pause/stop handling
+ * Some speed improvements and fixes
+
+Plugins
+ * ReplayGain plugin now processes albums in parallel
+ * New dark theme option in the theme switcher plugin
+ * Fix GStreamer equalizer
+ * Fix theme switcher plugin
+ * Fix GStreamer mono plugin
+
 2.9.82 (2013-05-02) - One day Marty McFly got bit by a werewolf!
 ----------------------------------------------------------------
 
